test/negative/transitionconstraint09.cfr
// Test for negative transition constraint

a
xor b 
      c 
      d 
      e 
      [c #[]#> d]   



